<resources>
    <string name="app_name">Mobino</string>
    <string name="user_name">Waldesio Pereira</string>
    <string name="title_name">IOTRUCK</string>
    <string name="btn_entrar">ENTRAR</string>
    <string name="stg_motoristas">MOTORISTAS</string>
    <string name="ht_senha">SENHA</string>
    <string name="ht_email">E-MAIL</string>
    <string name="tv_retomar_viagem">Retomar viagem</string>
    <string name="tv_bem_vindo">Bem vindo,</string>
    <string name="tv_opces">OPÇÕES</string>
    <string name="tv_sua_conta">Sua conta</string>
    <string name="tv_caminhoes">Caminhões</string>
    <string name="tv_viagens">Viagens</string>
    <string name="tv_proxima_viagem">PRÓXIMA VIAGEM</string>
    <string name="tv_sua_viagem">Sua Viagem</string>
    <string name="tv_solution">Mobino é a solução dos caminhoneiros da Iotruck. Caso tenha algum
        problema com seus dados, altere em "minha conta" ou contate o analista que realizou seu
        cadastro.
            Seja bem vindo!</string>
    <string name="tv_your_account">Sua conta</string>
    <string name="tv_schedules">Viagens</string>
    <string name="splash_bem_vindo">Seja bem vindo!</string>
    <string name="testado">Não há viagens!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="tv_entrar_contato">Entraremos em contato com</string>
    <string name="title_activity_schedule_ractivity">ScheduleRActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_travel">Ir para viagem</string>
    <string name="nascimento">NASCIMENTO:</string>
    <string name="contato">CONTATO:</string>
    <string name="seu_acesso">SEU ACESSO</string>
    <string name="password">Senha :</string>
    <string name="editar">EDITAR</string>
    <string name="programacao">Programação agendada para você</string>
    <string name="hoje">HOJE</string>
    <string name="analista">ANALISTA:</string>
    <string name="destino">DESTINO:</string>
    <string name="agenda">AGENDA</string>
    <string name="tempo_viagem">Tempo de viagem</string>
</resources>