<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/backgroundlogin"
        android:gravity="center"
        android:padding="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/painel_login"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/coruja" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/title_name"
                    android:textAlignment="center"
                    android:textColor="@color/blue_default"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stg_motoristas"
                    android:textAlignment="center"
                    android:textColor="@color/orange_default"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:orientation="vertical"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_login"
                    android:hint="@string/ht_email"
                    android:textAlignment="center" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/input_login"
                    android:hint="@string/ht_senha"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:paddingLeft="64dp"
                android:paddingRight="64dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_login"
                    android:text="@string/btn_entrar"
                    android:textColor="@color/blue_default"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>