<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.home.view.HomeActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".36"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="30dp"
        android:background="#C3C3C3"
        android:id="@+id/container_headerHome">

        <TextView
            android:id="@+id/tv_bem_vindo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bem_vindo"
            android:textSize="23sp"
            app:layout_constraintTop_toTopOf="@id/container_headerHome"
            app:layout_constraintStart_toStartOf="@id/container_headerHome"
            />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="25sp"
            android:textColor="@color/blue_default"
            app:layout_constraintTop_toBottomOf="@id/tv_bem_vindo"
            app:layout_constraintStart_toStartOf="@id/container_headerHome"
            />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="32dp"
            android:src="@mipmap/logout"
            android:onClick="logout"
            app:layout_constraintTop_toTopOf="@id/container_headerHome"
            app:layout_constraintEnd_toEndOf="@id/container_headerHome"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cointainer_options"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="@id/container_headerHome"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            app:layout_constraintEnd_toEndOf="@id/container_headerHome"
            app:layout_constraintStart_toStartOf="@id/container_headerHome">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_profile"
                android:layout_width="90dp"
                android:layout_height="160dp"
                android:background="@drawable/card_home"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toStartOf="@id/card_truckers"
                app:layout_constraintStart_toStartOf="@id/cointainer_options"
                app:layout_constraintTop_toTopOf="@id/cointainer_options"
                android:orientation="vertical">

                <ImageView
                    app:layout_constraintTop_toTopOf="@id/card_profile"
                    app:layout_constraintStart_toStartOf="@id/card_profile"
                    app:layout_constraintEnd_toEndOf="@id/card_profile"
                    android:id="@+id/iv_driver"
                    android:layout_width="34dp"
                    android:layout_height="40dp"
                    android:layout_margin="18dp"
                    android:src="@mipmap/profile" />

                <TextView
                    app:layout_constraintStart_toStartOf="@id/card_profile"
                    app:layout_constraintEnd_toEndOf="@id/card_profile"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@id/iv_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sua_conta"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_truckers"
                android:layout_width="90dp"
                android:layout_height="160dp"
                android:background="@drawable/card_home"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintStart_toEndOf="@id/card_profile"
                app:layout_constraintEnd_toStartOf="@id/card_schedule"
                app:layout_constraintTop_toTopOf="@id/cointainer_options"
                android:orientation="vertical">

                <ImageView
                    app:layout_constraintTop_toTopOf="@id/card_truckers"
                    app:layout_constraintStart_toStartOf="@id/card_truckers"
                    app:layout_constraintEnd_toEndOf="@id/card_truckers"
                    android:id="@+id/iv_trucker"
                    android:layout_width="34dp"
                    android:layout_height="40dp"
                    android:layout_margin="18dp"
                    android:src="@mipmap/trucks" />

                <TextView
                    app:layout_constraintStart_toStartOf="@id/card_truckers"
                    app:layout_constraintEnd_toEndOf="@id/card_truckers"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@id/iv_trucker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_caminhoes"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_schedule"
                android:layout_width="90dp"
                android:layout_height="160dp"
                android:background="@drawable/card_home"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintStart_toEndOf="@id/card_truckers"
                app:layout_constraintEnd_toEndOf="@id/cointainer_options"
                app:layout_constraintTop_toTopOf="@id/cointainer_options"
                android:orientation="vertical">

                <ImageView
                    app:layout_constraintTop_toTopOf="@id/card_schedule"
                    app:layout_constraintStart_toStartOf="@id/card_schedule"
                    app:layout_constraintEnd_toEndOf="@id/card_schedule"
                    android:id="@+id/iv_schedule"
                    android:layout_width="34dp"
                    android:layout_height="40dp"
                    android:layout_margin="18dp"
                    android:src="@mipmap/schedule" />

                <TextView
                    app:layout_constraintStart_toStartOf="@id/card_schedule"
                    app:layout_constraintEnd_toEndOf="@id/card_schedule"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@id/iv_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_viagens"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".32"
        app:layout_constraintTop_toBottomOf="@id/container_headerHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="30dp"
        android:id="@+id/container_next" >

        <TextView
            android:id="@+id/tv_proxima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sua viagem"
            android:textSize="23sp"
            app:layout_constraintTop_toTopOf="@id/container_next"
            app:layout_constraintStart_toStartOf="@id/container_next"
            />

        <TextView
            android:id="@+id/tv_viagem_proxima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ativa"
            android:textSize="25sp"
            android:textColor="@color/orange_default"
            app:layout_constraintTop_toBottomOf="@id/tv_proxima"
            app:layout_constraintStart_toStartOf="@id/container_next"
            />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent=".55"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_viagem_proxima"
                app:layout_constraintStart_toStartOf="@id/container_next"
                app:layout_constraintEnd_toEndOf="@id/container_next"
                android:background="@drawable/card_blue">

            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>