<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.home.view.HomeActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_headerHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#E0E4F1"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".36"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_bem_vindo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bem_vindo"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="@id/container_headerHome"
            app:layout_constraintTop_toTopOf="@id/container_headerHome" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange_default"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@id/container_headerHome"
            app:layout_constraintTop_toBottomOf="@id/tv_bem_vindo" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="32dp"
            android:onClick="logout"
            android:src="@mipmap/logout"
            app:layout_constraintEnd_toEndOf="@id/container_headerHome"
            app:layout_constraintTop_toTopOf="@id/container_headerHome" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cointainer_options"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="@id/container_headerHome"
            app:layout_constraintEnd_toEndOf="@id/container_headerHome"
            app:layout_constraintStart_toStartOf="@id/container_headerHome"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_profile"
                android:layout_width="90dp"
                android:layout_height="110dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/card_home"
                android:onClick="goToAccount"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/card_schedule"
                app:layout_constraintStart_toStartOf="@id/cointainer_options"
                app:layout_constraintTop_toTopOf="@id/cointainer_options">

                <ImageView
                    android:id="@+id/iv_driver"
                    android:layout_width="34dp"
                    android:layout_height="40dp"
                    android:layout_margin="18dp"
                    android:onClick="goToAccount"
                    android:src="@mipmap/profile"
                    app:layout_constraintEnd_toEndOf="@id/card_profile"
                    app:layout_constraintStart_toStartOf="@id/card_profile"
                    app:layout_constraintTop_toTopOf="@id/card_profile" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:onClick="goToAccount"
                    android:text="@string/tv_your_account"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/card_profile"
                    app:layout_constraintStart_toStartOf="@id/card_profile"
                    app:layout_constraintTop_toBottomOf="@id/iv_driver" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_schedule"
                android:layout_width="90dp"
                android:layout_height="110dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/card_home"
                android:onClick="goToTravels"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/cointainer_options"
                app:layout_constraintStart_toEndOf="@id/card_profile"
                app:layout_constraintTop_toTopOf="@id/cointainer_options">

                <ImageView
                    android:id="@+id/iv_schedule"
                    android:layout_width="34dp"
                    android:layout_height="40dp"
                    android:layout_margin="18dp"
                    android:onClick="goToTravels"
                    android:src="@mipmap/schedule"
                    app:layout_constraintEnd_toEndOf="@id/card_schedule"
                    app:layout_constraintStart_toStartOf="@id/card_schedule"
                    app:layout_constraintTop_toTopOf="@id/card_schedule" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:onClick="goToTravels"
                    android:text="@string/tv_schedules"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/card_schedule"
                    app:layout_constraintStart_toStartOf="@id/card_schedule"
                    app:layout_constraintTop_toBottomOf="@id/iv_schedule" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".36"
        app:layout_constraintTop_toBottomOf="@id/container_headerHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="30dp"
        android:id="@+id/container_next" >

        <TextView
            android:id="@+id/tv_sua_viagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sua_viagem"
            android:textSize="23sp"
            app:layout_constraintTop_toTopOf="@id/container_next"
            app:layout_constraintStart_toStartOf="@id/container_next"
            />

        <TextView
            android:id="@+id/tv_viagem_proxima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/orange_default"
            app:layout_constraintTop_toBottomOf="@id/tv_sua_viagem"
            app:layout_constraintStart_toStartOf="@id/container_next"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_retomar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/card_blue"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@id/container_next"
            app:layout_constraintHeight_percent=".48"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@id/container_next"
            app:layout_constraintTop_toBottomOf="@id/tv_viagem_proxima">

            <TextView
                android:id="@+id/tv_retomar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/container_retomar"
                app:layout_constraintTop_toTopOf="@id/container_retomar" />

            <TextView
                android:id="@+id/tv_code_travel"
                android:layout_width="220dp"
                android:layout_height="wrap_content"

                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@id/container_retomar"
                app:layout_constraintTop_toBottomOf="@id/tv_retomar" />

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginLeft="100dp"
                android:src="@mipmap/play"
                app:layout_constraintBottom_toBottomOf="@id/container_retomar"
                app:layout_constraintEnd_toEndOf="@id/container_retomar"
                app:layout_constraintStart_toEndOf="@id/tv_retomar"
                app:layout_constraintTop_toTopOf="@id/container_retomar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_iotruck"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@mipmap/caminhao"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".28"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_next">

        <TextView
            android:id="@+id/tv_solution"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="Mobino é a solução dos caminhoneiros da Iotruck. Caso tenha algum problema com seus dados, altere em 'minha conta' ou contate o analista que realizou seu cadastro.
            Seja bem vindo!"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/container_iotruck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>